src/test/deca/etapeA/invalid/parser/parser_literal_float_2.deca
// Description:
//    test du parseur pour les litéraux flottants
//    vérifie la bonne formation du litéral
//
// Resultats:
// erreur syntaxique
// Ligne <9> : <syntaxError>

2xab.AB0p-21F

